NEWS for the Gmisc package

Changes for 0.6.7
-----------------
* Added an interactive() check before using the viewer
* Minor adjustments to the htmlTable handling of no-blank spaces (&nbsp;)
* htmlTable now remember the ... argument and passes it on to the print.htmlTable() and cat()

Changes for 0.6.6
-----------------
* Improved the htmlTable viewer handling (thanks Adam Smith)

Changes for 0.6.5
-----------------
* Changed the getDescriptionsBy example to work with the htmlTable() instead of the Hmisc::latex()
* Fixed getDescriptionsBy bug - the Total column failed when specified to be last - thanks Alexandre Vivot
* Added example for side-by side plotting for forestplot2
* As of 0.98.932 the knitr package isn't loaded, instead the metadata or device options indicates that it is knitting
* htmlTable bug: The function can now handle matrices without column names
* htmlTable bug: The function deletes and warns when n.rgroup/n.cgroup < 1

Changes for 0.6.4
-------------------
* Bug fix for alt_col not respecting missing rgroup - added also a simple matrix output test
* Added visual tests for htmlTable and moved one of the examples there
* Added tableCSSclass option for htmlTable - thanks jphiplip

Changes for 0.6.3
-------------------
* Changed versioning to a 3-digit system as suggested by Yihui Xie http://yihui.name/en/2013/06/r-package-versioning/
* Added alt_col for coloring the rows of the htmlTable rgroups - thanks raredd

Changes for 0.6.2.3
-------------------
* Roxygen2 v 4.0.0 upgrade + other doc upgrades
* Percentages are now default without space between the number and the %-sign in order to better comply with English language standards

Changes for 0.6.2.2
-------------------
* transitionPlot - fixed arrow size and empty boxes
* outputInt now defaults to the ',' formatting according to the English language. It also has no-breaking space if html option is set. It can also handle complex vector/matrix input.