@@ -1,6 +1,6 @@
 Package: Gmisc
 Version: 0.6.7
-Date: 2014-07-22
+Date: 2014-07-27
 Title: A few handy misc functions for plots, tables, and more
 Author: Max Gordon <max@gforge.se>
 Maintainer: Max Gordon <max@gforge.se>
