@@ -9,6 +9,9 @@ export(describeFactors)
 export(describeMean)
 export(describeMedian)
 export(describeProp)
+export(figCapNo)
+export(figCapNoLast)
+export(figCapNoNext)
 export(forestplot2)
 export(fpColors)
 export(fpDrawCircleCI)
